[package]
name = "tactics_0"
version = "0.1.0"
authors = ["Daniel Hertenstein <daniel.hertenstein@gmail.com>"]
edition = "2018"

[dependencies]
tcod = "0.13.0"
renderer = { path = "../renderer" }
game_state = { path = "../game_state" }
input_handler = { path = "../input_handler" }
player_control = { path = "../player_control" }
ai = { path = "../ai" }
